# aoc-2022

./: .gitignore  README.md  pyproject.toml
aoc/: utils.py
aoc/day-1/: letsgo.py  letsgo2.py
aoc/day-10/: letsgo.py  letsgo2.py
aoc/day-11/: letsgo.py  letsgo2.py
aoc/day-12/: letsgo.py  letsgo2.py
aoc/day-13/: letsgo.py  letsgo2.py
aoc/day-14/: letsgo.py  letsgo2.py
aoc/day-2/: letsgo.py  letsgo2.py
aoc/day-3/: letsgo.py  letsgo2.py
aoc/day-4/: letsgo.py  letsgo2.py
aoc/day-5/: letsgo.py  letsgo2.py
aoc/day-6/: letsgo.py  letsgo2.py
aoc/day-7/: letsgo.py  letsgo2.py
aoc/day-8/: letsgo.py  letsgo2.py
aoc/day-9/: letsgo.py  letsgo2.py
aoc/wtf/: wtf.py
day-1/: letsgo2.py
