[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["dynalz"]
readme = "README.md"
packages = [{ include = "aoc" }]

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
